# cmake-make-library-for-windows

./: CMakeLists.txt  README.md
make_shared_lib/: CMakeLists.txt  make_shared_lib.cpp  make_shared_lib.h
make_static_lib/: CMakeLists.txt  make_static_lib.cpp  make_static_lib.h
test_hello/: CMakeLists.txt  test_hello.cpp
